index upage updated

--- a/styles/main.css
+++ b/styles/main.css
@@ -146,44 +146,50 @@ a:hover {
   border: 2px solid #fff;
   transition: all 0.6s ease-in-out;
   cursor: pointer; }
-  /* line 127, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 125, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .cess-btn:hover {
     text-decoration: none;
     background-color: white;
     color: #ce3030;
+    border-color: #ce3030;
     text-shadow: #460e08 0px 0px 0;
     box-shadow: 0px 2px 10px 2px #310a06; }
 
-/* line 133, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 132, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+.cess-o {
+  background-color: #ce3030;
+  color: #fff; }
+
+/* line 138, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .show {
   display: block;
   position: static; }
 
-/* line 136, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 141, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .hide {
   display: block;
   position: absolute;
   position: static; }
 
-/* line 140, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 145, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-active {
   background-color: white;
   color: #ce3030;
   text-shadow: #460e08 0px 0px 0;
   box-shadow: 0px 2px 10px 2px #310a06; }
 
-/* line 146, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 151, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-content {
   margin: 4%; }
-  /* line 148, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 153, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .cess-content p {
     text-align: justify; }
 
-/* line 151, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 156, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .p2 {
   display: inline-flex; }
 
-/* line 153, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 158, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .news {
   width: 60%;
   height: auto;
@@ -194,37 +200,50 @@ a:hover {
   background-color: #fff;
   color: #ce3030;
   text-align: center; }
-  /* line 164, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 169, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .news hr {
     background-color: #ce3030;
     height: 2px; }
 
-/* line 167, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 172, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .alt-body {
   background-color: #fff;
   margin: 30px 1%;
   box-shadow: 0px 1px 5px 1px #310a06;
-  min-height: 600px;
   border-radius: 2px;
   padding: 5px;
   word-wrap: break-word;
-  color: #310a06; }
+  color: #ce3030 !important; }
+  /* line 182, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  .alt-body h3 {
+    color: #8d2116;
+    font-weight: 600; }
+  /* line 185, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  .alt-body p {
+    color: #ce3030;
+    text-shadow: 0 0;
+    font-size: 27px !important; }
+
+/* line 189, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+.ion {
+  color: #ce3030;
+  font-size: 130px; }
 
 @media screen and (max-width: 810px) {
-  /* line 178, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 198, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .alt-body {
     margin-top: 120px; } }
 
 @media screen and (max-width: 602px) {
-  /* line 181, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 201, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .alt-body {
     margin-top: 5px !important; } }
 
-/* line 184, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 204, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .toggle {
   display: none; }
 
-/* line 186, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 206, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .block {
   background: #fff;
   color: #ce3030;
@@ -236,7 +255,7 @@ a:hover {
   width: 60%;
   margin: auto; }
 
-/* line 197, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 217, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .mob-nav {
   position: fixed;
   width: 100%;
@@ -245,31 +264,31 @@ a:hover {
   overflow-y: scroll;
   z-index: 999;
   background-color: #310a06; }
-  /* line 205, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 225, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .mob-nav .nav-item {
     color: #fff;
     font-size: 30px;
     display: flex;
     text-align: center;
     flex-direction: column; }
-  /* line 211, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 231, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .mob-nav .nav-item + .nav-item {
     border-bottom: 3px solid #fff;
     padding: 15px; }
 
-/* line 214, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 234, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-footer-o {
   margin: 0;
   background-color: #fff;
   color: #ce3030;
-  height: 30px;
+  height: auto;
   position: fixed;
   bottom: 0;
   width: 100%;
   font-size: 18px;
   font-weight: 400; }
 
-/* line 224, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 244, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-footer {
   margin: 0;
   background-color: #fff;
