--- a/styles/main.sass
+++ b/styles/main.sass
@@ -122,14 +122,19 @@ a:hover
 	border:2px solid #fff
 	transition:all 0.6s ease-in-out
 	cursor:pointer
-
-
 	&:hover
 		text-decoration:none
 		background-color:white
 		color:#ce3030
+		border-color:#ce3030
 		text-shadow:#460e08 0px 0px 0
 		box-shadow:0px 2px 10px 2px #310a06
+.cess-o
+	background-color:#ce3030
+	color:#fff
+
+
+	
 .show
 	display:block
 	position:static
@@ -168,11 +173,26 @@ a:hover
 	background-color:#fff
 	margin:30px 1%
 	box-shadow:0px 1px 5px 1px #310a06
-	min-height:600px
+	//min-height:600px
 	border-radius:2px
 	padding:5px
 	word-wrap:break-word
-	color:#310a06
+	color:#ce3030 !important
+	
+	h3 
+		color:#8d2116
+		font-weight:600
+	p
+		color:#ce3030
+		text-shadow:0 0 
+		font-size:27px !important
+.ion
+	color:#ce3030
+	font-size:130px
+
+
+
+
 
 @media screen and (max-width:810px) 
 	.alt-body
@@ -215,7 +235,7 @@ a:hover
 	margin:0
 	background-color:#fff
 	color:#ce3030
-	height:30px
+	height:auto
 	position:fixed
 	bottom:0
 	width:100%
