--- a/styles/main.css
+++ b/styles/main.css
@@ -37,11 +37,9 @@
 /* line 34, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 body {
   background: #ce3030;
-  overflow-x: hidden;
-  width: 99%;
-  margin: auto; }
+  overflow-x: hidden; }
 
-/* line 40, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 39, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .main {
   font-family: 'Arvo', serif;
   text-align: center;
@@ -55,7 +53,7 @@ body {
   color: #fff;
   text-shadow: #460e08 16px 2px 0; }
 
-/* line 52, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 51, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 p {
   font-size: 30px;
   color: #fff;
@@ -65,36 +63,36 @@ p {
   text-shadow: #460e08 4px 2px 0; }
 
 @media screen and (max-width: 1080px) {
-  /* line 61, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 60, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .main {
     text-shadow: #460e08 10px 2px 0; } }
 
 @media screen and (max-width: 640px) {
-  /* line 64, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 63, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .main {
     text-shadow: #460e08 7px 2px 0; } }
 
-/* line 67, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 66, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-nav {
   display: flex;
   flex-direction: space-around; }
 
-/* line 70, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 69, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .drop {
   display: none; }
 
 @media screen and (max-width: 1124px) {
-  /* line 73, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 72, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .cess-nav .cess-btn {
     margin: 40px 30px; } }
 
 @media screen and (max-width: 811px) {
-  /* line 80, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 79, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .left-nav,
   .right-nav,
   .p2 {
     display: none !important; }
-  /* line 82, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 81, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .drop {
     display: block;
     cursor: pointer;
@@ -103,34 +101,34 @@ p {
     position: absolute;
     top: 10px;
     left: 20px; }
-  /* line 90, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 89, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .main {
     top: 150px; }
-  /* line 92, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 91, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .wrap {
     margin-top: 260px; }
-  /* line 95, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 94, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .logo img {
     position: absolute;
     left: 0; } }
 
 @media screen and (max-width: 600px) {
-  /* line 100, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 99, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .main {
     top: 150px; }
-  /* line 102, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 101, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .wrap {
     margin-top: 120px; }
-  /* line 105, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 104, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .logo img {
     position: static;
     left: 0; } }
 
-/* line 108, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 107, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 a:hover {
   text-decoration: none; }
 
-/* line 110, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 109, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-btn {
   display: flex;
   z-index: 9999;
@@ -147,7 +145,7 @@ a:hover {
   border: 2px solid #fff;
   transition: all 0.6s ease-in-out;
   cursor: pointer; }
-  /* line 126, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 125, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .cess-btn:hover {
     text-decoration: none;
     background-color: white;
@@ -156,41 +154,41 @@ a:hover {
     text-shadow: #460e08 0px 0px 0;
     box-shadow: 0px 2px 10px 2px #310a06; }
 
-/* line 133, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 132, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-o {
   background-color: #ce3030;
   color: #fff; }
 
-/* line 139, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 138, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .show {
   display: block;
   position: static; }
 
-/* line 142, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 141, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .hide {
   display: block;
   position: absolute;
   position: static; }
 
-/* line 146, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 145, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-active {
   background-color: white;
   color: #ce3030;
   text-shadow: #460e08 0px 0px 0;
   box-shadow: 0px 2px 10px 2px #310a06; }
 
-/* line 152, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 151, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-content {
   margin: 4%; }
-  /* line 154, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 153, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .cess-content p {
     text-align: justify; }
 
-/* line 157, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 156, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .p2 {
   display: inline-flex; }
 
-/* line 159, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 158, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .news {
   width: 60%;
   height: auto;
@@ -201,12 +199,12 @@ a:hover {
   background-color: #fff;
   color: #ce3030;
   text-align: center; }
-  /* line 170, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 169, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .news hr {
     background-color: #ce3030;
     height: 2px; }
 
-/* line 173, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 172, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .alt-body {
   background-color: #fff;
   margin: 30px 1%;
@@ -215,36 +213,36 @@ a:hover {
   padding: 5px;
   word-wrap: break-word;
   color: #ce3030 !important; }
-  /* line 183, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 182, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .alt-body h3 {
     color: #8d2116;
     font-weight: 600; }
-  /* line 186, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 185, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .alt-body p {
     color: #ce3030;
     text-shadow: 0 0;
     font-size: 27px !important; }
 
-/* line 190, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 189, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .ion {
   color: #ce3030;
   font-size: 130px; }
 
 @media screen and (max-width: 810px) {
-  /* line 199, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 198, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .alt-body {
     margin-top: 120px; } }
 
 @media screen and (max-width: 602px) {
-  /* line 202, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 201, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .alt-body {
     margin-top: 5px !important; } }
 
-/* line 205, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 204, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .toggle {
   display: none; }
 
-/* line 207, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 206, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .block {
   background: #fff;
   color: #ce3030;
@@ -256,7 +254,7 @@ a:hover {
   width: 60%;
   margin: auto; }
 
-/* line 218, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 217, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .mob-nav {
   position: fixed;
   width: 100%;
@@ -265,19 +263,19 @@ a:hover {
   overflow-y: scroll;
   z-index: 999;
   background-color: #310a06; }
-  /* line 226, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 225, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .mob-nav .nav-item {
     color: #fff;
     font-size: 30px;
     display: flex;
     text-align: center;
     flex-direction: column; }
-  /* line 232, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+  /* line 231, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
   .mob-nav .nav-item + .nav-item {
     border-bottom: 3px solid #fff;
     padding: 15px; }
 
-/* line 235, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 234, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-footer-o {
   margin: 0;
   background-color: #fff;
@@ -289,7 +287,7 @@ a:hover {
   font-size: 18px;
   font-weight: 400; }
 
-/* line 245, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
+/* line 244, C:/xampp/htdocs/creationhub/alpha_pro/styles/main.sass */
 .cess-footer {
   margin: 0;
   background-color: #fff;
