--- a/styles/main.sass
+++ b/styles/main.sass
@@ -220,7 +220,7 @@ a:hover
 	top:0.1px
 	height:100%
 	overflow-y:scroll
-	z-index:999
+	z-index:9999999
 	background-color:#310a06
 	.nav-item
 		color:#fff
