--- a/styles/main.sass
+++ b/styles/main.sass
@@ -250,3 +250,28 @@ a:hover
 	width:100%
 	font-size:18px
 	font-weight:400
+
+.img-responsive
+	border:5px solid #ce3030 
+
+@media only screen and (max-width : 768px) 
+	.anim 
+		/*CSS transitions*/
+		-o-transition-property: none !important;
+		-moz-transition-property: none !important;
+		-ms-transition-property: none !important;
+		-webkit-transition-property: none !important;
+		transition-property: none !important;
+		/*CSS transforms*/
+		-o-transform: none !important;
+		-moz-transform: none !important;
+		-ms-transform: none !important;
+		-webkit-transform: none !important;
+		transform: none !important;
+		/*CSS animations*/
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	
