--- a/styles/main.sass
+++ b/styles/main.sass
@@ -34,6 +34,8 @@
 body
 	background:#ce3030
 	overflow-x:hidden
+	width:95%
+	margin:auto 
 	
 
 .main
@@ -73,7 +75,7 @@ p
 		@media screen and (max-width:1124px)
 			margin:40px 30px
 	
-@media screen and (max-width:811px)
+@media screen and (max-width:1107px)
 	.left-nav,
 	.right-nav,
 	.p2
@@ -194,7 +196,7 @@ a:hover
 
 
 
-@media screen and (max-width:810px) 
+@media screen and (max-width:1107px) 
 	.alt-body
 		margin-top:120px
 @media screen and (max-width:602px) 
@@ -216,8 +218,9 @@ a:hover
 			
 .mob-nav
 	position:fixed
-	width:100%
+	width:100% !important
 	top:0.1px
+	left:0
 	height:100%
 	overflow-y:scroll
 	z-index:9999999
