--- a/styles/impress-demo.css
+++ b/styles/impress-demo.css
@@ -275,7 +275,29 @@ a:focus {
 #big .thoughts {
     font-size: 90px;
     line-height: 150px;
+
+	
 }
+
+
+#big-n {
+    width: 600px;
+    text-align: center;
+    font-size: 60px;
+    line-height: 1;
+}
+
+#big-n b {
+    display: block;
+    font-size: 250px;
+    line-height: 250px;
+}
+
+#big-n .thoughts {
+    font-size: 90px;
+    line-height: 150px;
+}
+ 
 
 /*
     'Tiny ideas' just need some tiny styling.
