--- a/styles/main.sass
+++ b/styles/main.sass
@@ -32,7 +32,9 @@
 		border-bottom-left-radius:8%
 		background-color:#fff
 body
-	background:#ce3030
+	background-image:url('../images/bg/img.jpg')
+	background-repeat:none
+	background-attachment:fixed
 	overflow-x:hidden
 	width:95%
 	margin:auto 
@@ -182,6 +184,9 @@ a:hover
 	color:#ce3030 !important
 	
 	h3 
+		color:#8d2116
+		font-weight:600
+	h4
 		color:#8d2116
 		font-weight:600
 	p
